[tool.poetry]
name = "clip-explainer"
version = "0.1.0"
description = "explain clip's predictions"
authors = ["karimvision <kabdulmunaff@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = {url = "https://download.pytorch.org/whl/nightly/cpu/torch-1.14.0.dev20221113-cp39-none-macosx_11_0_arm64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/nightly/cpu/torchvision-0.15.0.dev20221113-cp39-cp39-macosx_11_0_arm64.whl"}
clip = {git = "https://github.com/openai/CLIP.git", rev = "d50d76d"}
jupyterlab = "^3.5.0"
ftfy = "^6.1.1"
regex = "^2022.10.31"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
